# zk_evm

./: .gitignore  Cargo.toml
evm_arithmetization/: Cargo.toml
evm_arithmetization/benches/: arithmetic_stark.rs  keccak_sponge_stark.rs  keccak_stark.rs  logic_stark.rs
evm_arithmetization/src/: bench_utils.rs  circuit_sizes.rs  fixed_recursive_verifier.rs  lib.rs  logic.rs  proof.rs
evm_arithmetization/src/arithmetic/: arithmetic_stark.rs  mod.rs
evm_arithmetization/src/keccak_sponge/: keccak_sponge_stark.rs
evm_arithmetization/src/memory/: segments.rs
evm_arithmetization/src/witness/: memory.rs
evm_arithmetization/tests/: add11_yml.rs  simple_transfer.rs
np_data/: agg_proof.json  block_proof.json  proof_0.json  proof_1.json
np_explorations/: Cargo.toml  README.md
np_explorations/data/bench_2/: tmp.json
np_explorations/data/exploration_1/: agg_proof.json  block_proof.json  proof_0.json  proof_1.json
np_explorations/python/: analyze_bench_1.py  analyze_bench_1_fri_config.py  analyze_bench_1_hashes.py  analyze_bench_2.py  analyze_benches.py  gen_bytecode.ipynb  gen_transaction.ipynb  proving_cost_analysis_side_by_side.csv
np_explorations/src/: bench_1.rs  bench_2.rs  common.rs  exploration_1.rs  exploration_3.rs  lib.rs  main.rs  no_recursion.rs
np_explorations/src/exploration_2/: mod.rs
np_explorations/zk-benchmarks/: .gitignore  main.tf
proof_gen/: Cargo.toml
proof_gen/tests/: proof_aggregation.rs
zero_bin/prover/: Cargo.toml
zero_bin/prover/tests/: block_proof.rs  multiple_blocks_prove.rs
