[package]
name = "proof_gen"
description = "Generates block proofs from zero proof IR."
version = "0.4.0"
authors = ["Polygon Zero <bgluth@polygon.technology>"]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true

[dependencies]
log = { workspace = true }
paste = { workspace = true }
plonky2 = { workspace = true }
serde = { workspace = true }

# Local dependencies
evm_arithmetization = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rlp = { workspace = true }
ethereum-types = { workspace = true }
hex-literal = { workspace = true }
keccak-hash = { workspace = true }
mpt_trie = { workspace = true }
serde_json = { workspace = true }
